# Relay

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TECHNICAL_DECISIONS.md  main.py  pyproject.toml  ruff.toml
app/: __init__.py  config.py  exceptions.py  prompts.py
app/models/: request.py  response.py
app/providers/: anthropic.py  base.py
app/routers/: ask.py
app/services/: history.py  llm.py
static/: index.html
tests/: test_core.py
