[project]
name = "relay"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.111.0",
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
